# FinCLI-Renewed

./: .env.example  .gitignore  .npmignore  CHANGELOG.md  CLAUDE.md  CODE-REVIEW-DEEP.md  CODE-REVIEW.md  CONTRIBUTING.md  LICENSE  README.md  TASK.md  fincli_bug_hunt_prompt.md  fincli_bug_report.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  install-test.yml  publish.yml
docs/: architecture.md  commands.md  setup.md  troubleshooting.md
fincli/: __init__.py
fincli/app/: __init__.py  main.py
fincli/app/agents/: __init__.py  registry.py
fincli/app/analysis/: ai_prompts.py  analyzer.py  assistant_context.py  backtest.py  gameplay_plan.py  indicators.py  market_structure.py  multi_timeframe.py  technical_debate.py  technical_signal.py  trading_methods.py
fincli/app/brokers/: __init__.py  alpaca.py  base.py  binance.py  registry.py
fincli/app/cli/: autocomplete.py  commands.py  router.py
fincli/app/connectors/: __init__.py  catalog.py  news_connectors.py  webhooks.py
fincli/app/diagnostics/: __init__.py  capabilities.py  runtime.py
fincli/app/modules/: alerts.py  algo_engine.py  broker_adapter.py  economic_calendar.py  exporter.py  journal.py  journal_analytics.py  portfolio.py  portfolio_analytics.py  portfolio_risk.py  realtime_stream.py  reports.py  scanner.py  session_history.py  trading.py  transactions.py  (+2 more)
npm/: postinstall.js  setup.js
scripts/: __init__.py  prepublish_check.py
tests/: __init__.py  conftest.py  test_ai_http_phase3.py  test_ai_phase2.py  test_command_smoke.py  test_commands.py  test_config.py  test_critical_paths.py  test_export_phase3.py  test_history_resume.py  test_market_phase2.py  test_multi_portfolio_transactions.py  test_news_freshness.py  test_phase10_market_overview.py  test_phase11_transactions.py  test_phase12_journal_review.py  test_phase13_dashboard.py  test_phase14_market_cache.py  test_phase15_tui_palette.py  test_phase16_calendar.py  test_phase17_multi_asset_data.py  test_phase184_provider_trust.py  test_phase18_technical_signal.py  test_phase19_npm_wrapper.py  test_phase20_ai_model_selector.py  test_phase21_ai_chat_tui.py  test_phase21_technical_debate.py  test_phase22_system_commands.py  test_phase23_market_provider_selector.py  test_phase24_tui_nonblocking.py  test_phase25_yfinance_global_equities.py  test_phase26_local_secret_commands.py  test_phase27_web_research.py  test_phase28_session_history.py  test_phase29_provider_intelligence.py  test_phase30_multi_timeframe.py  test_phase31_backtest.py  test_phase32_exports_reports.py  test_phase33_alerts.py  test_phase34_alphavantage_provider.py  (+59 more)
(+76 files in other folders)
