[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fincli"
version = "1.8.0"
description = "Modern financial CLI/TUI terminal for market monitoring and analysis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "textual>=0.86.0",
  "rich>=13.9.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.2",
  "keyring>=25.0.0",
  "pydantic>=2.9.2",
  "yfinance>=0.2.50",
  "pandas>=2.2.3",
  "numpy>=2.1.0",
  "defusedxml>=0.7.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.3", "hypothesis>=6.0", "ruff>=0.4.0", "mypy>=1.10.0"]
market = ["yfinance>=0.2.50", "pandas>=2.2.3", "numpy>=2.1.0"]

[project.scripts]
fincli = "fincli.app.main:main"

[tool.setuptools.packages.find]
include = ["fincli*"]
exclude = ["npm*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (slow, hitting external APIs)",
    "slow: marks tests as slow (> 5 seconds)",
]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "SIM108", # use ternary operator (sometimes less readable)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
